# twitter_feed_reader

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: article_generator.py  auth.py  catalogue.py  client.py  database.py  main.py  models.py  orchestrator.py  requests.py
app/parser/: __init__.py  detail.py  item.py  timeline.py
docs/: KNOWLEDGE.md  PYTHON.md  TODO.md
ntbs/: curl_to_env.ipynb  download_item.ipynb  download_timeline.ipynb  parser_item.ipynb  parser_timeline.ipynb
test/: CornerCases.txt  how_to_test.md
test/individuals_012026/: article.json  article_detail.json  article_detail.txt  article_detail_media.json  normal.json  quote.json  quote_retweet.json  replying_to.json  retweet.json  thread.json  thread_toobig.json  thread_with_media.json  tweet_with_img.json  video.json
test/timelines_012026/: detail_article.json  detail_article_media.json  timeline_1.json  timeline_2.json  timeline_3.json  timeline_single_item.json
