[project]
name = "x-sourcer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "notebook>=7.5.3",
    "pandas>=3.0.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
